--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,6 +134,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-push-notification')
     implementation project(':react-native-vector-icons')
     compile project(":rncamerakit")
     implementation project(':react-native-gesture-handler')
