--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-modal-datetime-picker": "^6.0.0",
+    "react-native-push-notification": "^3.1.2",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.3.2"
   },
